style changes - added custom theme colours - added logo - refactor shared ui module

--- a/apps/how-to-dad/src/styles.scss
+++ b/apps/how-to-dad/src/styles.scss
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Lato|Raleway:900&display=swap');
 @import 'themes';
-
 @import '~@nebular/theme/styles/globals';
 
 @include nb-install() {
   @include nb-theme-global();
-};
+}
 /* You can add global styles to this file, and also import other style files */
