general app design and layout (#14)
closes #5 

* style changes
- added custom theme colours
- added logo
- refactor shared ui module

* add general design and layout
- needs refactoring into components
- e2e tests done
- modals to be done with its features

--- a/apps/how-to-dad/src/app/app.component.scss
+++ b/apps/how-to-dad/src/app/app.component.scss
@@ -1,133 +1,57 @@
-/*
- * Remove template code below
- */
-:host {
-  display: block;
-  font-family: sans-serif;
-  min-width: 300px;
-  max-width: 600px;
-  margin: 50px auto;
-}
+@import '../themes.scss';
 
-.gutter-left {
-  margin-left: 9px;
-}
-
-.col-span-2 {
-  grid-column: span 2;
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.main-column {
+  padding-top: 0 !important;
 }
 
 header {
-  background-color: #143055;
-  color: white;
   padding: 5px;
-  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  img {
+    margin-left: -2%;
+  }
+
+  h1 {
+    margin-bottom: 5px;
+    margin-top: 1rem;
+  }
+
+  p {
+    margin-top: 0;
+  }
 }
 
 main {
   padding: 0 36px;
-}
-
-p {
-  text-align: center;
-}
-
-h1 {
-  text-align: center;
-  margin-left: 18px;
-  font-size: 24px;
-}
-
-h2 {
-  text-align: center;
-  font-size: 20px;
-  margin: 40px 0 10px 0;
-}
-
-.resources {
-  text-align: center;
-  list-style: none;
-  padding: 0;
-  display: grid;
-  grid-gap: 9px;
-  grid-template-columns: 1fr 1fr;
-}
-
-.resource {
-  color: #0094ba;
-  height: 36px;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  padding: 3px 9px;
-  text-decoration: none;
-}
-
-.resource:hover {
-  background-color: rgba(68, 138, 255, 0.04);
-}
-
-pre {
-  padding: 9px;
-  border-radius: 4px;
-  background-color: black;
-  color: #eee;
-}
-
-details {
-  border-radius: 4px;
-  color: #333;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  padding: 3px 9px;
-  margin-bottom: 9px;
-}
-
-summary {
-  cursor: pointer;
-  outline: none;
-  height: 36px;
-  line-height: 36px;
-}
-
-.github-star-container {
-  margin-top: 12px;
-  line-height: 20px;
-}
-
-.github-star-container a {
   display: flex;
   align-items: center;
-  text-decoration: none;
-  color: #333;
-}
+  justify-content: center;
+  flex-direction: column;
 
-.github-star-badge {
-  color: #24292e;
-  display: flex;
-  align-items: center;
-  font-size: 12px;
-  padding: 3px 10px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  border-radius: 3px;
-  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  margin-left: 4px;
-  font-weight: 600;
-}
+  .joke-card {
+    max-width: 800px;
+    width: 100%;
+    text-align: center;
 
-.github-star-badge:hover {
-  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-  border-color: rgba(27, 31, 35, 0.35);
-  background-position: -0.5em;
-}
-.github-star-badge .material-icons {
-  height: 16px;
-  width: 16px;
-  margin-right: 4px;
+    p {
+      font-size: 2.5rem;
+      line-height: 2.5rem;
+      font-weight: bold;
+      text-shadow: 2px 2px 10px rgba(1, 80, 158, 0.37);
+    }
+  }
+
+  .joke-actions {
+    button {
+      margin: 0 15px;
+
+      &.size-small {
+        width: 25%;
+      }
+    }
+  }
 }
