--- a/apps/how-to-dad/src/themes.scss
+++ b/apps/how-to-dad/src/themes.scss
@@ -80,7 +80,9 @@ $nb-themes: nb-register-theme(
     color-danger-transparent-300: rgba(188, 20, 37, 0.24),
     color-danger-transparent-400: rgba(188, 20, 37, 0.32),
     color-danger-transparent-500: rgba(188, 20, 37, 0.4),
-    color-danger-transparent-600: rgba(188, 20, 37, 0.48)
+    color-danger-transparent-600: rgba(188, 20, 37, 0.48),
+    footer-background-color: none,
+    footer-shadow: none
   ),
   htd-theme,
   default
